corrected the hamburger open and close colors on mobile

--- a/Projects/projects.css
+++ b/Projects/projects.css
@@ -74,6 +74,7 @@ body {
 /* Hamburger Menu for Mobile */
 .header__hamburger {
   cursor: pointer;
+  color: black;
   display: none;
   background: none;
   border: none;
@@ -81,6 +82,7 @@ body {
 }
 
 .hamburger__icon {
+  color: black;
   font-size: 1.5rem;
 }
 
@@ -107,6 +109,7 @@ body {
   background: none;
   border: none;
   cursor: pointer;
+  color: black;
 }
 
 .drawer__nav a {
