--- a/index.css
+++ b/index.css
@@ -110,6 +110,7 @@ body {
   background: none;
   border: none;
   cursor: pointer;
+  color: black;
 }
 
 .drawer__nav a {
@@ -214,7 +215,7 @@ body {
     color: white;
     text-align: center;
     font-weight: bold;
-    padding: 0 20px;
+    padding: 10 20px;
     z-index: 10;
 }
 
@@ -254,7 +255,6 @@ body {
   .main-content h1 {
     font-size: 1.5rem; 
   }
-
   .main-content p {
     font-size: 1rem; 
   }
@@ -262,7 +262,10 @@ body {
     font-size: 1.1rem;
   }
   .overlay-text h2 {
-    font-size: 1.5rem;
+    font-size: 1.2rem;
+  }
+  .overlay-text p {
+    font-size: 1rem;
   }
   .mission-vision h4 {
     font-size: 1.2rem;
